[tool.poetry]
name = "andyd"
version = "0.1.0"
description = "A toy implementation of the Raft Consensus Algorithm"
authors = ["Andy Dirnberger <andy.dirnberger@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dirn/andyd"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pre-commit = "^2.10.0"

[tool.isort]
add_imports = "from __future__ import annotations"
atomic = true
force_sort_within_sections = true
include_trailing_comma = true
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
