[tool.poetry]
name = "Colorado"
version = "0.1.0"
description = "A toy implementation of the Raft Consensus Algorithm"
authors = ["Andy Dirnberger <andy.dirnberger@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dirn/Colorado"

[tool.poetry.dependencies]
python = "^3.9"
structlog = "^20.2.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.10.0"
tox = "^3.21.3"

[tool.isort]
add_imports = "from __future__ import annotations"
atomic = true
force_sort_within_sections = true
include_trailing_comma = true
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
